# juiz_core

./: .gitignore  Cargo.toml  Dockerfile.juiz  MOTIVATION.md  Makefile.cpp_example  README.md  build_docker.sh  docker-compose.yml  juiz.conf  juiz_server.conf  temp_test_script.py
app/juiz_command/: Cargo.toml
app/juiz_command/src/: _main.rs  container.rs  container_process.rs  main.rs  process.rs  setup.rs
brokers/http_broker/: Cargo.toml
brokers/http_broker/src/: http_broker.rs  http_broker_proxy.rs  lib.rs  main.rs
brokers/http_broker/src/http_router/: any.rs  any_process.rs  broker.rs  connection.rs  container.rs  container_process.rs  execution_context.rs  mod.rs  process.rs  system.rs
brokers/qmp_broker/: Cargo.toml  example_component.conf  juiz.conf
brokers/qmp_broker/src/: lib.rs  qmp_broker.rs  qmp_broker_proxy.rs
brokers/qmp_broker/tests/: broker_test.rs
ecs/timer_ec/: Cargo.toml
ecs/timer_ec/src/: lib.rs  timer_ec.rs
examples/container_examples/example_container_increment/: Cargo.toml
examples/container_examples/example_container_increment/src/: lib.rs
examples/cpp/: CMakeLists.txt  Makefile
examples/cpp/component/: CMakeLists.txt  Makefile  cpp_component.cpp
examples/cpp/component/example_component/: Makefile  (+2 more)
examples/cpp/container/: CMakeLists.txt  Makefile  example_container.conf
examples/cpp/cpp_component/: cpp_component.conf
examples/cpp/cpp_process/: Makefile  cpp_process.conf  cppadd.cpp
examples/cpp/process/: CMakeLists.txt  Makefile
examples/increment_process/: Cargo.toml  increment_process.conf
examples/increment_process/src/: lib.rs  main.rs
examples/opencv_examples/cv_camera_capture/: Cargo.toml
examples/opencv_examples/juiz_opencv/: Cargo.toml
examples/python_container/: Cargo.toml  pycontainer.conf  pycontainer.py  pyincrement.py
examples/python_container/python_app/: app.py
examples/rust/container/: Cargo.toml  example_container.conf  example_container_stack.conf
http_broker/: Cargo.toml
http_broker/src/: http_broker.rs  http_broker_proxy.rs
http_broker/src/http_router/: any.rs  app.rs  connection.rs  container.rs  mod.rs  process.rs  system.rs
juiz_app/: Cargo.toml  README.md
juiz_app/src_/: main.rs
juiz_core/: Cargo.toml
juiz_core/src/: lib.rs  object.rs  prelude.rs
juiz_core/src/brokers/: broker.rs  broker_factories_wrapper.rs  broker_factory.rs  broker_factory_impl.rs  broker_proxy.rs  broker_proxy_factory.rs  broker_ptr.rs  core_broker.rs  mod.rs
juiz_core/src/connections/: connection.rs  connection_builder.rs  connection_factory.rs  connection_factory_impl.rs  destination_connection_impl.rs  mod.rs  source_connection_impl.rs
juiz_core/src/containers/: container_factory.rs  container_process_factory.rs  container_ptr.rs  mod.rs
juiz_core/src/core/: core_broker.rs  core_worker.rs  mod.rs  subsystem_proxy.rs  system.rs  system_store.rs
juiz_core/src/ecs/: execution_context_core.rs  execution_context_function.rs  execution_context_holder.rs  execution_context_holder_factory.rs  execution_context_proxy.rs  one_shot_ec.rs
juiz_core/src/geometry/: mod.rs
juiz_core/src/plugin/: mod.rs  plugin.rs
juiz_core/src/processes/: mod.rs  process.rs  process_factory.rs
juiz_core/src/topics/: mod.rs
juiz_core/tests/: connection_test.rs  core_broker_integration_test.rs  core_broker_test.rs  identifier_test.rs  process_test.rs  system_test.rs
juiz_macro/: Cargo.toml
juiz_macro/juiz_macro_inner/: Cargo.toml
juiz_macro/juiz_macro_inner/src/: lib.rs
juiz_macro/src/: lib.rs
juiz_macro/src/component/: mod.rs
juiz_macro/src/container/: container_manifest.rs  gen_container_factory.rs  juiz_component_container.rs  juiz_container.rs  mod.rs
juiz_macro/src/container_process/: container_process_manifest.rs  gen_process_factory.rs  juiz_component_container_process.rs  juiz_container_process.rs  mod.rs
juiz_macro/src/process/: gen_process_factory.rs  juiz_component_process.rs  juiz_process.rs  mod.rs  process_manifest.rs
juiz_macro/src/util/: arg_parser.rs  attr_parser.rs  decorate_function_arg.rs  mod.rs
juiz_sdk/: Cargo.toml
juiz_sdk/src/: connection_identifier.rs  container_identifier.rs  identifier.rs  lib.rs  object.rs  prelude.rs  process_identifier.rs
juiz_sdk/src/connections/: connection.rs  connection_core.rs  connection_manifest.rs  connection_type.rs  mod.rs  source_connection.rs
juiz_sdk/src/containers/: container_impl.rs  container_ptr.rs  mod.rs
juiz_sdk/src/factory/: mod.rs
juiz_sdk/src/geometry/: mod.rs  pose.rs
juiz_sdk/src/manifests/: argument_manifest.rs  component_manifest.rs  container_manifest.rs  container_process_manifest.rs  manifest_description.rs  mod.rs  process_manifest.rs  topic_manifest.rs
juiz_sdk/src/processes/: mod.rs  process.rs
juiz_sdk/src/result/: error.rs  mod.rs
juiz_sdk/src/utils/: manifest_checker.rs  manifest_util.rs  mod.rs  sync_util.rs  yaml_conf_load.rs
juiz_sdk/src/value/: capsule.rs  capsule_converter.rs  capsule_map.rs  capsule_map_converter.rs  capsule_ptr.rs  capsule_ptr_converter.rs  converter_error.rs  mod.rs  value_converter.rs
juiz_sdk/test_packages/a_arg_proc/: Cargo.toml
juiz_sdk/test_packages/aa_arg_proc/: Cargo.toml
juiz_sdk/test_packages/b_arg_proc/: Cargo.toml
juiz_sdk/test_packages/bb_arg_proc/: Cargo.toml
juiz_sdk/test_packages/bbb_arg_proc/: Cargo.toml
juiz_sdk/test_packages/f_arg_proc/: Cargo.toml
juiz_sdk/test_packages/fa_arg_proc/: Cargo.toml
juiz_sdk/test_packages/ff_arg_proc/: Cargo.toml
juiz_sdk/test_packages/fff_arg_proc/: Cargo.toml
juiz_sdk/test_packages/i_arg_proc/: Cargo.toml
juiz_sdk/test_packages/ia_arg_proc/: Cargo.toml
juiz_sdk/test_packages/ii_arg_proc/: Cargo.toml
juiz_sdk/test_packages/iii_arg_proc/: Cargo.toml
juiz_sdk/test_packages/img_arg_proc/: Cargo.toml
juiz_sdk/test_packages/s_arg_proc/: Cargo.toml
juiz_sdk/test_packages/ss_arg_proc/: Cargo.toml
juiz_sdk/test_packages/sss_arg_proc/: Cargo.toml
juiz_tutorial/rust/talker_listener/: Cargo.toml  juiz.conf  start_listener.sh  start_talker.sh
timer_ec/: Cargo.toml
timer_ec/src/: timer_ec.rs
(+602 files in other folders)
