[package]
name = "juiz_core"
version = "0.4.0"
edition = "2021"
default-run = "juiz"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "juiz"
path = "src/bin/juiz/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.75"
approx = "*"
axum = "0.7.2"

clap = { version="4.4.10", features = ["derive"] }

env_logger = "0.11.5"
futures = "0.3.29"
home = "0.5.9"
image = "0.25.2"
image-stream = "0.1.0"
interprocess = {version="2.2.0", features=["tokio"]}
libloading = "0.8.1"
log = "0.4.20"
mopa = "0.2.2"
num-traits = "0.2.19"
nalgebra = "0.33.0"



opencv = {version="0.92.0", default-features=false, features=["highgui", "videoio", "imgproc", "imgcodecs", "clang-runtime"]}
pyo3 = {version = "0.22.2", features=["auto-initialize", "gil-refs"]}

quaternion-core = "0.5.2"
regex = "1.10.6"
reqwest = {version="0.12.7", features = ["blocking", "json"]}
serde = {version = "1.0.209", features = ["derive"]}
serde_json="1.0.127"
signal-hook = "0.3.17"

structopt = "0.3.26"

thiserror = "1.0.63"
tower = { version = "0.4.0", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio = { version = "1.39.3", features = ["full"] }
uuid = {version = "1.10.0", features = ["v4"] }
utoipa = { version="4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version="4.0.0", features = ["axum"] }
utoipa-rapidoc = { version="4.0.0", features = ["axum"] }

yaml-rust2 = "0.8.0"

[workspace]
members = [
    ".",
    # "app/juiz_command",
    "ecs/timer_ec",
    "ecs/one_shot_ec", 
    "ecs/main_loop_ec",
    "examples/rust/process/increment_process",
    "examples/rust/process/decrement_process",
    "examples/rust/container/example_container",
    "examples/rust/container/example_container_get",
    "examples/rust/container/example_container_increment",
    "examples/rust/component/juiz_opencv",
    "examples/rust/component/example_component", 
    "brokers/qmp_broker",
]
default-members = [
    ".",
    # "app/juiz_command",
    "ecs/timer_ec",
    "ecs/one_shot_ec", 
    "ecs/main_loop_ec",
    #"examples/rust/process/increment_process",
    #"examples/rust/process/decrement_process",
    #"examples/rust/container",
    #"examples/rust/container/example_container",
    #"examples/rust/container/example_container_get",
    #"examples/rust/container/example_container_increment",
    #"examples/rust/component/example_component",
    "brokers/qmp_broker",
]
