[package]
name = "juiz_meta"
version = "0.4.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]

juiz_macro = {version="0.0.4", path="juiz_macro"}


anyhow = "1.0.89"
approx = "0.5.1"
axum = {version="0.7.7", features = ["multipart"]}


clap = { version="4.4.10", features = ["derive"] }

env_logger = "0.11.5"
futures = "0.3.29"
home = "0.5.9"
image = "0.24"
image-stream = "0.1.0"
interprocess = {version="2.2.0", features=["tokio"]}
libloading = "0.8.5"
litrs = "0.4.1"
log = "0.4.20"
mopa = "0.2.2"
num-traits = "0.2.19"
nalgebra = "0.33.0"



proc-macro2 = {version = "1.0.89"}
# opencv = {version="0.92.0", default-features=false, features=["highgui", "videoio", "imgproc", "imgcodecs", "clang-runtime"], optional=true}
pyo3 = {version = "0.22.2", features=["auto-initialize", "gil-refs"]}

quote = "1.0.37"
quaternion-core = "0.5.2"
regex = "1.10.6"
reqwest = {version="0.12.8", features = ["blocking", "json"]}
serde = {version = "1.0.209", features = ["derive"]}
serde_json="1.0.127"
signal-hook = "0.3.17"

structopt = "0.3.26"
syn = { version = "2.0.87", features = ["full", "extra-traits", "parsing"] }
thiserror = "1.0.63"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
uuid = {version = "1.10.0", features = ["v4"] }
utoipa = { version="4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version="4.0.0", features = ["axum"] }
utoipa-rapidoc = { version="4.0.0", features = ["axum"] }

yaml-rust2 = "0.9.0"


# juiz_core = { path = "../../../../juiz_core/" }
[workspace]
members = [
    ".",
    "juiz_macro",
    "juiz_sdk",
    "juiz_core",
    "juiz_app",
    "ecs/timer_ec",
    "ecs/one_shot_ec", 
    "ecs/main_loop_ec",
    "examples/rust/process/increment_process",
    "examples/rust/process/decrement_process",
    "examples/rust/process/talker",
    "examples/rust/process/listener",
    "examples/rust/container/example_container",
    "examples/rust/container/example_container_stack",
    "examples/rust/container/example_container_get",
    "examples/rust/container/example_container_increment",
    "examples/rust/container/example_container_stack_get",
    "examples/rust/component/juiz_opencv",
    "examples/rust/component/example_component", 
    "brokers/qmp_broker",

    #"tutorial/rust/talker_listener/talker",


    "juiz_sdk/test_packages/a_arg_proc",
    "juiz_sdk/test_packages/aa_arg_proc",
    "juiz_sdk/test_packages/fa_arg_proc",
    "juiz_sdk/test_packages/ia_arg_proc",
    "juiz_sdk/test_packages/b_arg_proc",
    "juiz_sdk/test_packages/bb_arg_proc",
    "juiz_sdk/test_packages/bbb_arg_proc",
    "juiz_sdk/test_packages/i_arg_proc",
    "juiz_sdk/test_packages/ii_arg_proc",
    "juiz_sdk/test_packages/iii_arg_proc",
    "juiz_sdk/test_packages/f_arg_proc",
    "juiz_sdk/test_packages/ff_arg_proc",
    "juiz_sdk/test_packages/fff_arg_proc",
    "juiz_sdk/test_packages/s_arg_proc",
    "juiz_sdk/test_packages/ss_arg_proc",
    "juiz_sdk/test_packages/sss_arg_proc",
    "juiz_sdk/test_packages/img_arg_proc",
]
default-members = [
    ".",
    "juiz_macro",
    "juiz_sdk",
    "juiz_core",
    "juiz_app",
    "ecs/timer_ec",
    "ecs/one_shot_ec", 
    "ecs/main_loop_ec",
    #"examples/rust/process/increment_process",
    #"examples/rust/process/decrement_process",
    #"examples/rust/container",
    "examples/rust/process/talker",
    "examples/rust/process/listener",
    "examples/rust/container/example_container",
    "examples/rust/container/example_container_get",
    "examples/rust/container/example_container_increment",
    #"examples/rust/component/example_component",
    #"examples/rust/container/example_container_stack",
    #"examples/rust/container/example_container_stack_get",
    "brokers/qmp_broker",


    # "juiz_sdk/test_packages/a_arg_proc",
    # "juiz_sdk/test_packages/aa_arg_proc",
    # "juiz_sdk/test_packages/fa_arg_proc",
    # "juiz_sdk/test_packages/ia_arg_proc",
    # "juiz_sdk/test_packages/b_arg_proc",
    # "juiz_sdk/test_packages/bb_arg_proc",
    # "juiz_sdk/test_packages/bbb_arg_proc",
    # "juiz_sdk/test_packages/i_arg_proc",
    # "juiz_sdk/test_packages/ii_arg_proc",
    # "juiz_sdk/test_packages/iii_arg_proc",
    # "juiz_sdk/test_packages/f_arg_proc",
    # "juiz_sdk/test_packages/ff_arg_proc",
    # "juiz_sdk/test_packages/fff_arg_proc",
    # "juiz_sdk/test_packages/s_arg_proc",
    # "juiz_sdk/test_packages/ss_arg_proc",
    # "juiz_sdk/test_packages/sss_arg_proc",
    # "juiz_sdk/test_packages/img_arg_proc",
]
