[package]
name = "juiz_app"
version = "0.0.1"
edition = "2021"
description = "JUIZ utility command-line application package"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "juiz"
path = "src/bin/juiz/main.rs"

[dependencies]
clap = {workspace = true}
home = {workspace = true}
juiz_core = { version="0.0.3", path="../juiz_core" }