[package]
name = "juiz_core"
version = "0.4.0"
edition = "2021"
# default-run = "juiz"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "juiz"
#path = "src/bin/juiz/main.rs"

[lib]
crate-type = ["cdylib", "lib"]


[features]
default = []
opencv4 = [ ]

[dependencies]
anyhow = "1.0.89"
approx = "*"
axum = "0.7.7"

clap = { version="4.4.10", features = ["derive"] }

env_logger = "0.11.5"
futures = "0.3.29"
home = "0.5.9"
image = "0.24"
image-stream = "0.1.0"
interprocess = {version="2.2.0", features=["tokio"]}
libloading = "0.8.5"
log = "0.4.20"
mopa = "0.2.2"
num-traits = "0.2.19"
nalgebra = "0.33.0"



# opencv = {version="0.92.0", default-features=false, features=["highgui", "videoio", "imgproc", "imgcodecs", "clang-runtime"], optional=true}
pyo3 = {version = "0.22.2", features=["auto-initialize", "gil-refs"]}

quaternion-core = "0.5.2"
regex = "1.10.6"
reqwest = {version="0.12.8", features = ["blocking", "json"]}
serde = {version = "1.0.209", features = ["derive"]}
serde_json="1.0.127"
signal-hook = "0.3.17"

structopt = "0.3.26"

thiserror = "1.0.63"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = {version = "1.10.0", features = ["v4"] }
utoipa = { version="4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version="4.0.0", features = ["axum"] }
utoipa-rapidoc = { version="4.0.0", features = ["axum"] }

yaml-rust2 = "0.9.0"

juiz_sdk = { path = "../juiz_sdk/" }