[package]
name = "juiz_macro"
version = "0.0.2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0.89"}
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full", "extra-traits", "parsing"] }
yaml-rust2 = {workspace = true}
toml = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
litrs = "0.4.1"

image = {workspace = true}