[package]
name = "juiz_macro"
version = "0.0.4"
edition = "2021"
description = "Macro definitions for juiz_sdk crate."
license = "WTFPL"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true}
quote = {workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "parsing"] }
yaml-rust2 = {workspace = true}
toml = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
litrs = {workspace = true}
image = {workspace = true}