[package]
name = "juiz_sdk"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
opencv4 = []

[dependencies]
anyhow = {workspace = true}
approx = {workspace = true}
axum = {workspace = true}

clap = { version="4.4.10", features = ["derive"] }

env_logger = {workspace = true}
futures = {workspace = true}
home = {workspace = true}
image = {workspace = true}
image-stream = {workspace = true}

log = {workspace = true}
mopa = {workspace = true}
num-traits = {workspace = true}
nalgebra = {workspace = true}

quaternion-core = {workspace = true}
regex = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json= {workspace = true}

thiserror = {workspace = true}
uuid = {workspace = true, features = ["v4"] }

yaml-rust2 = {workspace = true}

