[package]
name = "juiz_sdk"
version = "0.0.5"
edition = "2021"
description = "SDK definitions for juiz functional elements crate."
license = "WTFPL"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
approx = {workspace = true}

[dependencies]
anyhow = {workspace = true}
# axum = {workspace = true}
# clap = { version="4.4.10", features = ["derive"] }

env_logger = {workspace = true}
# futures = {workspace = true}
# home = {workspace = true}
image = {workspace = true}
image-stream = {workspace = true}

log = {workspace = true}
mopa = {workspace = true}
num-traits = {workspace = true}
nalgebra = {workspace = true}

quaternion-core = {workspace = true}
regex = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json= {workspace = true}

thiserror = {workspace = true}
uuid = {workspace = true, features = ["v4"] }

yaml-rust2 = {workspace = true}

juiz_macro = { workspace = true }