[package]
name = "juiz_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
juiz_core = { path="../../" }
env_logger = "0.10.1"
structopt = "0.3.26"
# opencv = {version="0.88.6", features=["clang-runtime"]}
