[package]
name = "http_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.20"
juiz_core = { path="../../" }
env_logger = "0.10.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.29"
anyhow = "1.0.75"
thiserror = "1.0.51"

serde = "1.0.193"
axum = "0.7.2"
uuid = "1.6.1"
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version="2.0.0", features = ["axum"] }
utoipa-rapidoc = { version="2.0.0", features = ["axum"] }
utoipa = { version="4.1.0", features = ["axum_extras"] }
reqwest = {version="0.11.22", features = ["blocking", "json"]}

# mat2image = "0.2.0"
# cv-convert = "0.25.0"

opencv = {version="0.84.0", default-features=false, features=["clang-runtime"]}
image = "0.24.0"
cv-convert = {version="0.25.0", default-features=false, features=["opencv_0-84", "image_0-24"]}
image-stream = "0.1.0"