[package]
name = "qmp_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

juiz_core = { path="../../juiz_core/" }

serde_json = "*"
rmpv = { version = "1.3", features = ["with-serde"] }
rmp-serde = "1.3"


rustls = { version="0.23", default-features = false, features=[ "ring" ] }
rcgen = "0.13"
quinn = "0.11.3"
ring = "0.17"
quinn-proto = { version = "0.11.6", default-features = false }
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
