[package]
name = "example_container_increment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
juiz_core = { path="../../../" }
env_logger = "0.10.1"
example_container = { path="../example_container/" }
