[package]
name = "juiz_tutorial_talker_listener"
version = "0.0.2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
juiz_sdk = { version="0.0.5" }

# juiz_core = { path = "../../../../juiz_core/" }
[workspace]
members = [
    "talker",
    "listener",
]

default-members = [
    "talker",
    "listener"
]