[package]
name = "example_component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

anyhow = "1.0.75"
juiz_core = { path="../../../../" }
env_logger = "0.10.1"

opencv = {version="*", default-features=false, features=["highgui", "videoio", "imgproc", "imgcodecs", "clang-runtime"]}