[package]
name = "example_container_stack_get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
juiz_core = { path="../../../../" }
example_container_stack = { path="../example_container_stack/" }
